# hn-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yaml  devlog.md  flake.nix  spec.md  test_news_api.rs
src/: lib.rs
src/tools/: mod.rs
src/tools/bravesearch/: mod.rs
src/tools/hn/: mod.rs
src/tools/hn/client/: mod.rs  tests.rs
src/transport/: mod.rs  sse_server.rs  stdio.rs
